# sphinxad-sys

./: Cargo.toml  README.md  build.rs
examples/: read microphone and write to wav file.rs
src/: lib.rs
