[package]
name = "sphinxad-sys"
version = "0.1.0"
authors = ["trionprog <trionprog@gmail.com>"]
description = "Sphinxad low-level wrapper, that allows to read data from microphone"
homepage = "https://github.com/TrionProg/sphinxad-sys"
repository = "https://github.com/TrionProg/sphinxad-sys"
readme = "README.md"
keywords = ["sphinx", "cmusphinx", "microphone"]
license-file = "LICENSE"

[dependencies]
libc = "0.2.0"
